; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/inetmib1/extr_main.c_mib2IpNetQuery.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/inetmib1/extr_main.c_mib2IpNetQuery.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@mib2IpNet = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"(0x%02x, %s, %p)\0A\00", align 1
@ipNetTable = common dso_local global %struct.TYPE_7__* null, align 8
@SNMP_ERRORSTATUS_NOSUCHNAME = common dso_local global i32 0, align 4
@mib2IpNetMap = common dso_local global i32 0, align 4
@SNMP_ERRORSTATUS_READONLY = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"0x%02x: unsupported PDU type\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_6__*, i32*)* @mib2IpNetQuery to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mib2IpNetQuery(i32 %0, %struct.TYPE_6__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32, i32* @mib2IpNet, align 4
  %12 = call i32 @DEFINE_OID(i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* @TRUE, align 4
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = call i32 @SnmpUtilOidToA(i32* %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @TRACE(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %17, i32* %18)
  %20 = load i32, i32* %4, align 4
  switch i32 %20, label %82 [
    i32 130, label %21
    i32 129, label %21
    i32 128, label %78
  ]

21:                                               ; preds = %3, %3
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** @ipNetTable, align 8
  %23 = icmp ne %struct.TYPE_7__* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %21
  %25 = load i32, i32* @SNMP_ERRORSTATUS_NOSUCHNAME, align 4
  %26 = load i32*, i32** %6, align 8
  store i32 %25, i32* %26, align 4
  br label %77

27:                                               ; preds = %21
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @getItemAndIntegerInstanceFromOid(i32* %29, i32* %7, i32 %30, i32* %10, i32* %9)
  %32 = load i32*, i32** %6, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32*, i32** %6, align 8
  %34 = load i32, i32* %33, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %76, label %36

36:                                               ; preds = %27
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @assert(i32 %37)
  %39 = load i32, i32* %10, align 4
  %40 = call i32 @assert(i32 %39)
  %41 = load i32, i32* %9, align 4
  %42 = load %struct.TYPE_7__*, %struct.TYPE_7__** @ipNetTable, align 8
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = icmp sgt i32 %41, %44
  br i1 %45, label %46, label %49

46:                                               ; preds = %36
  %47 = load i32, i32* @SNMP_ERRORSTATUS_NOSUCHNAME, align 4
  %48 = load i32*, i32** %6, align 8
  store i32 %47, i32* %48, align 4
  br label %75

49:                                               ; preds = %36
  %50 = load i32, i32* @mib2IpNetMap, align 4
  %51 = load i32, i32* @mib2IpNetMap, align 4
  %52 = call i32 @DEFINE_SIZEOF(i32 %51)
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** @ipNetTable, align 8
  %54 = load i32, i32* %9, align 4
  %55 = sub nsw i32 %54, 1
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %53, i64 %56
  %58 = load i32, i32* %10, align 4
  %59 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %60 = call i32 @mapStructEntryToValue(i32 %50, i32 %52, %struct.TYPE_7__* %57, i32 %58, %struct.TYPE_6__* %59)
  %61 = load i32*, i32** %6, align 8
  store i32 %60, i32* %61, align 4
  %62 = load i32*, i32** %6, align 8
  %63 = load i32, i32* %62, align 4
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %74, label %65

65:                                               ; preds = %49
  %66 = load i32, i32* %4, align 4
  %67 = icmp eq i32 %66, 129
  br i1 %67, label %68, label %74

68:                                               ; preds = %65
  %69 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %70 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %69, i32 0, i32 0
  %71 = load i32, i32* %10, align 4
  %72 = load i32, i32* %9, align 4
  %73 = call i32 @setOidWithItemAndInteger(i32* %70, i32* %7, i32 %71, i32 %72)
  store i32 %73, i32* %8, align 4
  br label %74

74:                                               ; preds = %68, %65, %49
  br label %75

75:                                               ; preds = %74, %46
  br label %76

76:                                               ; preds = %75, %27
  br label %77

77:                                               ; preds = %76, %24
  br label %87

78:                                               ; preds = %3
  %79 = load i32, i32* @SNMP_ERRORSTATUS_READONLY, align 4
  %80 = load i32*, i32** %6, align 8
  store i32 %79, i32* %80, align 4
  %81 = load i32, i32* @FALSE, align 4
  store i32 %81, i32* %8, align 4
  br label %87

82:                                               ; preds = %3
  %83 = load i32, i32* %4, align 4
  %84 = call i32 @FIXME(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 %83)
  %85 = load i32, i32* @SNMP_ERRORSTATUS_NOSUCHNAME, align 4
  %86 = load i32*, i32** %6, align 8
  store i32 %85, i32* %86, align 4
  br label %87

87:                                               ; preds = %82, %78, %77
  %88 = load i32, i32* %8, align 4
  ret i32 %88
}

declare dso_local i32 @DEFINE_OID(i32) #1

declare dso_local i32 @TRACE(i8*, i32, i32, i32*) #1

declare dso_local i32 @SnmpUtilOidToA(i32*) #1

declare dso_local i32 @getItemAndIntegerInstanceFromOid(i32*, i32*, i32, i32*, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @mapStructEntryToValue(i32, i32, %struct.TYPE_7__*, i32, %struct.TYPE_6__*) #1

declare dso_local i32 @DEFINE_SIZEOF(i32) #1

declare dso_local i32 @setOidWithItemAndInteger(i32*, i32*, i32, i32) #1

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
